# openics

./: .gitignore  AUTHORS  COPYING  ChangeLog  NEWS  README  TODO  cleanup.sh  configure.in  detab.c  detab.sh  remake.sh
doc/: SDK.txt  dd-cip.txt  dd-dnp3.txt  dd-enip.txt  dd-modbus.txt  dd-standard.txt.planned
etc/ics/scenario.d/: org.energysec.ics
man/: TODO
nids/: mknids
src/: Makefile.am
src/icsids/: Makefile.am  icsids-args.c  icsids-args.h  icsids-process.c  icsids-process.h  icsids.c  icsids.h
src/libics/: Makefile.am  ics.c  ics.h  icscip.c  icscip.h  icscommon.c  icscommon.h  icsdnp3.c  icsdnp3.h  icsenip.c  icsenip.h  icsiec61131.h  icsmodbus.c  icsmodbus.h  icspredicate.c  icspredicate.h
stuff/: getaddrinfo.c  makestuff
