AC_INIT(configure.in)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(ics, 1.0)
AC_CONFIG_MACRO_DIR([m4])
AC_LANG_C
AC_PROG_CC_C99
AC_PROG_LIBTOOL

CFLAGS="-Wall -std=gnu99 -D_BSD_SOURCE -D__BSD_SOURCE -D__FAVOR_BSD -DHAVE_NET_ETHERNET_H"

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LIBTOOL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

AC_CHECK_HEADERS([arpa/inet.h fcntl.h stdint.h stdlib.h string.h syslog.h unistd.h pcap.h pcre.h libnet.h])

AC_TYPE_INT16_T
AC_TYPE_INT32_T
AC_TYPE_INT64_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T
AC_TYPE_UINT8_T

AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_MKTIME
AC_FUNC_STRTOD
AC_CHECK_FUNCS([alarm clock_gettime memset strdup strrchr strstr strtol strtoul])

AC_CONFIG_FILES([Makefile
                 src/Makefile
                 src/libics/Makefile
				 src/icsids/Makefile])
AC_OUTPUT


